--- a/5-queue-control.tex
+++ b/5-queue-control.tex
@@ -20,7 +20,7 @@ It is well known that delay-based congestion control algorithms (as \name uses) 
 To prevent this, \name utilizes prior work, Nimbus~\cite{nimbus-arxiv}, which provides a mechanism for detecting the presence of buffer-filling\footnote{In particular, Nimbus detects ``elastic'' cross-traffic~\cite{nimbus-arxiv}, a superset of buffer-filling traffic. \cite{nimbus-arxiv} provides an explanation of this distinction
 and a detailed evaluation of Nimbus' accuracy of detecting elastic cross traffic and speed of switching between the two modes, using both emulated and real-world experiments. \name{}'s use of Nimbus does not impact its accuracy or speed of switching.} 
 cross traffic, and proposes temporarily switching to a buffer-filling scheme to compete fairly whenever such cross traffic is present.
-At a high-level, the detection mechanism works as follows: given a desired sending rate $r(t)$ (an input from an underlying congestion control algorithm), Nimbus superimposes an asymmetric sinusoid onto $r(t)$ to compute the actual sending rate. Then, it monitors the ACK receive rate in the frequency domain; the sinusoidal variations in the sending rate will be visible in the receive rate only if some buffer-filling cross traffic is sharing the same bottleneck queue. 
+At a high-level, the detection mechanism works as follows: given a desired sending rate $r(t)$ (from an underlying congestion control algorithm), Nimbus superimposes an asymmetric sinusoid onto $r(t)$ to compute the actual sending rate. Then, it monitors the ACK receive rate in the frequency domain; the sinusoidal variations in the sending rate will be visible in the receive rate only if some buffer-filling cross traffic is sharing the same bottleneck queue. 
 
 What exactly should the \inbox do when it detects buffer-filling traffic? Using a buffer-filling scheme for the bundle as in Nimbus would be fraught: since a bundle is comprised of many individual flows, the \inbox would need to know the number of flows in the bundle to know how aggressively it should compete in order to receive its fair share (as in the status quo)~\cite{multcp}. 
 This number may vary significantly over time and would be difficult to measure, especially on high-performance datapaths~\cite{heavy-hitters}.
