--- a/packages.tex
+++ b/packages.tex
@@ -172,3 +172,6 @@
 \newcommand{\capinbox}{Sendbox\xspace}
 \newcommand{\capoutbox}{Receivebox\xspace}
 \newcommand{\pair}{\inbox-\outbox pair\xspace}
+
+% Adding top box for arxiv
+\usepackage[absolute]{textpos}
