Updates from Overleaf

--- a/5-queue-control.tex
+++ b/5-queue-control.tex
@@ -16,14 +16,13 @@ In this section, we describe how \name can re-use the same measurements from \S\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % As described in \S\ref{4.3}, \name uses a delay-based congestion control algorithm to control queues in the middle of the network. 
-It is well known that delay-based congestion control algorithms (as \name uses) lose throughput when competing with buffer-filling algorithms~\cite{copa}. 
+It is well known that delay-based congestion control algorithms (as \name uses) lose throughput when competing with buffer-filling algorithms~\cite{copa}.\pg{cite nimbus as well} 
 % However, it is well-known that such algorithms lose throughput when competing with buffer-filling algorithms~\cite{copa}.
 % Therefore, in order to compete fairly with buffer-filling cross-traffic, \name must first detect the presence of such traffic and disable its use of a delay-based controller.
-To prevent this, \name utilizes prior work, Nimbus~\cite{nimbus-arxiv}, which provides a mechanism for detecting the presence of buffer-filling cross traffic,
-\footnote{In particular, Nimbus actually detects ``elastic'' traffic (defined in~\cite{nimbus-arxiv}), which includes, but is not limited to, buffer-filling traffic. \cite{nimbus-arxiv} provides an explanation of this distinction and a justification that it is a reasonable approach.}
+To prevent this, \name utilizes prior work, Nimbus~\cite{nimbus-arxiv}, which provides a mechanism for detecting the presence of buffer-filling cross traffic,\footnote{In particular, Nimbus actually detects ``elastic'' traffic (defined in~\cite{nimbus-arxiv}), which includes, but is not limited to, buffer-filling traffic. \cite{nimbus-arxiv} provides an explanation of this distinction and a justification that it is a reasonable approach.}
 and proposes temporarily switching to a buffer-filling scheme to compete fairly whenever such cross traffic is present.
 % and proposes switching between two modes: using a buffer-filling scheme when buffer-filling cross traffic is present and using a delay-control scheme otherwise.
-At a high-level, the detection mechanism works as follows: given a desired sending rate $r(t)$ (computed according to the underlying congestion control algorithm), Nimbus superimposes an asymmetric sinusoid onto $r(t)$ to compute the actual sending rate. Then, it monitors the ACK receive rate in the frequency domain; the sinusoidal variations in the sending rate will be visible in the receive rate only if some buffer-filling cross traffic is sharing the same bottleneck queue. %  buffer-filling cross traffic will cause an ``echo'' of these variations in the receive rate, while non-buffer-filling traffic will not.
+At a high-level, the detection mechanism works as follows: given a desired sending rate $r(t)$ (computed according to the underlying congestion control algorithm), Nimbus superimposes an asymmetric sinusoid onto $r(t)$ to compute the actual sending rate. Then, it monitors the ACK receive rate in the frequency domain\pg{it uses the send and receive rate to compute cross-traffic rate, it monitors cross-traffic rate in the frequency domain}; the sinusoidal variations in the sending rate will be visible in the receive rate\pg{cross-traffic rate} only if some buffer-filling cross traffic is sharing the same bottleneck queue.%  buffer-filling cross traffic will cause an ``echo'' of these variations in the receive rate, while non-buffer-filling traffic will not.
 \footnote{\cite{nimbus-arxiv} includes a detailed evaluation of Nimbus' accuracy of detecting elastic cross traffic and speed of switching between the two modes, using both emulated and real-world experiments. \name{}'s use of Nimbus does not impact its accuracy or speed of switching.}
 
 But what exactly should the \inbox do when it detects buffer-filling traffic? Using a buffer-filling scheme for the bundle as in Nimbus would be fraught: since a bundle is comprised of many individual flows, the \inbox would need to know the number of flows in the bundle to know how aggressively it should compete in order to receive its fair share (as in the status quo)~\cite{multcp}. Especially on high-performance datapaths this number may vary significantly over time and would be difficult to measure~\cite{heavy-hitters}.
@@ -71,17 +70,15 @@ the \inbox must maintain sufficient queueing for the up-pulse,
 $A \int_0^{\frac{T}{4}} \sin(\frac{4\pi{}t}{T}) dt = \frac{AT}{2\pi}$.
 From \cite{nimbus-arxiv}, we use $T = 0.2$ seconds and $A =$ one-fourth the bottleneck bandwidth. Then, by Little's law, the amount of extra queueing necessary is equivalent to
 % By Little's law, we can calculate the amount of extra queueing: 
-$\frac{T}{8\pi}$, or $8$ms. % We call this the target queueing delay, or $q_T$. 
-We thus configure the \inbox to maintain a target queueing delay of $q_T = 10$ms (the additional $2$ms is a cushion against input variance).
-\footnote{This extra queueing is in addition to normal queueing in the network. As a result, the end-to-end connections will see mild RTT inflation, but in \S\ref{s:robust:cross} we show that this effect is not large; \name still achieves performance comparable to the status quo.}
+$\frac{T}{8\pi}$, or $8$ms. \pg{why by little's law, you just substituted value of A as $\mu/4$.}% We call this the target queueing delay, or $q_T$. 
+We thus configure the \inbox to maintain a target queueing delay of $q_T = 10$ms (the additional $2$ms is a cushion against input variance).\footnote{This extra queueing is in addition to normal queueing in the network. As a result, the end-to-end connections will see mild RTT inflation, but in \S\ref{s:robust:cross} we show that this effect is not large; \name still achieves performance comparable to the status quo.}
 
 % In order to achieve this target queueing delay,
 Of course, while any additional delay beyond $q_T$ would provide sufficient queue for the up-pulse, it would also add unnecessary delay to the end-to-end connections. Thus, we want to stay as close to $q_T$ as possible. In order to achieve this,
-we design a PI controller for the \inbox which determines how the base sending rate $r(t)$ should be updated
-\footnote{Note that $\dot{r}(t)$ is an update to the base sending rate \emph{before} superimposing the Nimbus pulse.}
+we design a PI controller for the \inbox which determines how the base sending rate $r(t)$ should be updated\footnote{Note that $\dot{r}(t)$ is an update to the base sending rate \emph{before} superimposing the Nimbus pulse.}
 at each time step to move to the target:\footnote{This is similar to the PIE AQM mechanism~\cite{pie}, however, unlike PIE, there is no feedback delay between setting $r(t)$ and observing its effect on $q(t)$.}
 $\dot{r}(t) = \alpha (q(t) - q_T) + \beta (\dot{q}(t))$, where $q(t)$ is the current queue size at the \inbox in ms and $\alpha$ and $\beta$ are both positive.
-If the current queueing delay is greater than the target, the first term will be positive, causing the rate to increase, and the queue to drain faster, ultimately decreasing the queueing delay. Similarly, if the queue size is growing, the second term will be positive and again ultimately decrease the queueing delay. The scale of $\alpha$ and $\beta$ represent a tradeoff: the larger they are, the faster the controller will approach the target queueing delay. If they are too large, the controller's variations will nullify the Nimbus pulse. If they are too small, it will take too long to reach the target delay. Experimentally, we found that $\alpha=10$ and $\beta = 10$ provide a good balance for the types of scenarios included in our evaluation and thus used these values for all of our experiments.
+If the current queueing delay is greater than the target, the first term will be positive, causing the rate to increase, and the queue to drain faster, ultimately decreasing the queueing delay. Similarly, if the queue size is growing, the second term will be positive and again ultimately decrease the queueing delay\pg{don't call it queueing delay, queueing target values in ms is assuming the bottleneck bandwidth rate, not r(t).}. The scale of $\alpha$ and $\beta$ represent a tradeoff: the larger they are, the faster the controller will approach the target queueing delay. If they are too large, the controller's variations will nullify the Nimbus pulse. If they are too small, it will take too long to reach the target delay. Experimentally, we found that $\alpha=10$ and $\beta = 10$ provide a good balance for the types of scenarios included in our evaluation and thus used these values for all of our experiments.
 
 
 % This problem is similar to the role of the PIE AQM mechanism~\cite{pie}, which also seeks to maintain a queueing delay target.
